configuration_files/calico_policies_example/lock_down_all_trafic.yaml
# This yaml lock the traffic off all pods in all namespaces except in kube-system, calico-syste e calico-apiserver
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: default-deny
spec:
  selector: projectcalico.org/namespace not in  {'kube-system', 'calico-system', 'calico-apiserver', 'karpenter'}
  types:
  - Ingress
  - Egress
